# tutorials

./: CV_Scanning.ipynb  HasanResume.pdf.txt  Julia.ipynb  Rust.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  book.toml  evcxr-jupyter-integration.ipynb  evcxr_jupyter_tour.ipynb  names.csv  simplefile.txt
.ipynb_checkpoints/: CV_Scanning-checkpoint.ipynb  Python-checkpoint.ipynb  Untitled-checkpoint.ipynb  evcxr-jupyter-integration-checkpoint.ipynb
.rust_magic/: cell.rs
Rust/rust-call-c/: Cargo.toml  build.rs
Rust/rust-call-c/src/: main.rs
Rust/rust-cli/email/: Cargo.toml  Settings.toml  contacts.csv  email.html  ok.csv
Rust/rust-cli/email-sending/: Cargo.toml  Settings.toml  contacts.csv  html_contents.html  text_contents.txt
Rust/rust-cli/email-sending/src/: main.rs
Rust/rust-cli/email/src/: attachment.rs  main.rs
Rust/rust-cli/read-pdf/: Cargo.toml
Rust/rust-cli/read-pdf/src/: main.rs
Rust/rust-cli/read-word/: Cargo.toml
Rust/rust-cli/read-word/src/: main.rs
Rust/rust-jupyter-notebooks/: HasanResume.docx  readDocx.ipynb  readTextFile.ipynb  twice.c
Rust/rust-jupyter-notebooks/.ipynb_checkpoints/: Call C from Rust-checkpoint.ipynb  readDocx-checkpoint.ipynb
Rust/rust-mdbook/: book.toml
book/: chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
julia/: cv_screening.ipynb
julia/.ipynb_checkpoints/: cv_screening-checkpoint.ipynb
julia/src/: cv_reading.jl  main.jl
python/: main.py
rpi/: Cargo.toml  led.py
rpi/.cargo/: config
rpi/src/: main.rs
rust/: Cargo.toml
rust-muliplatforms/: Cargo.toml
rust-muliplatforms/src/: lib.rs
rust-muliplatforms/src/android/: mod.rs
rust-muliplatforms/src/ios/: mod.rs
rust-muliplatforms/src/wasm/: mod.rs
rust/src/: main.rs
src/: chapter_1.md
