[package]
name = "rust"
version = "0.1.0"
authors = ["hajsf <hasan.ajsf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { git="https://github.com/pdf-rs/pdf" }
#pdf = "0.6.3"
#pdf-extract = "0.5.1"
#lopdf = "0.23.0"