[package]
name = "email-sending"
version = "0.1.0"
authors = ["Hasan Yousef <hasan.ajsf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"
config = "0.9"
csv = "1.1.1"
serde = { version = "1.0.99", features = ["derive"] }
