[package]
name = "read-pdf"
version = "0.1.0"
authors = ["Hasan Yousef <hasan.ajsf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = { git = "https://github.com/pdf-rs/pdf"}
#lopdf = "0.23.0"
#pdf-extract = "0.5.1"
# pdf = "0.6.3"
